only shop owners can break signs on their chests